[package]
name = "ironlicensing"
version = "1.0.0"
edition = "2021"
authors = ["IronServices <support@ironservices.com>"]
description = "Official Rust SDK for IronLicensing - Software licensing and activation"
license = "MIT"
repository = "https://github.com/IronServices/ironlicensing-rust"
homepage = "https://ironlicensing.com"
documentation = "https://docs.rs/ironlicensing"
keywords = ["licensing", "activation", "software-licensing", "drm"]
categories = ["api-bindings", "authentication"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
once_cell = "1.18"
dirs = "5.0"
hostname = "0.3"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
